0.6.5 (2013-11-21)
* vhd-tool: add machine-parsable progress reporting
* vhd-tool: stream/serve support for SHA1/tar/chunked XenServer import/export encoding
* conditionally compile sparse_dd

0.6.4 (2013-11-05)
* vhd-tool serve: support receiving data as raw (no chunked or NBD)
* vhd-tool serve: use BLKGETSIZE64 to get the size of the destination block device

0.6.3 (2013-11-01)
* open vhds read/only where possible

0.6.2 (2013-10-31)
* support for opening disks > 4GiB on 32-bit hosts

0.6.1 (2013-10-25)
* sparse_dd: set the vhd parent search path to include the directory
  of the vhd, not the current directory of the sparse_dd process

0.6.0 (2013-08-02)
* sparse_dd: use O_DIRECT by default
* sparse_dd: allow encryption to be enabled and disabled via config file
* sparse_dd: experimental options to bypass tapdisk for reads and writes
* vhd-tool CLI prototype
